syntax = "proto3";

package auth;

option go_package = "./proto";


service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse) {};
  rpc Login (LoginRequest) returns (AuthResponse) {};
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}
