syntax = "proto3";

package product;

option go_package = "./proto";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
}

message GetProductRequest {
    string product_id = 1;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}
